2002-12-04  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (fake_gcv_object): New macro.
	(SAVE_REGISTERS, finish_entry_frame, make_HANDLER_frame): Use it.
	* eval.d (funcall_iclosure, interpret_bytecode_): Likewise.
	* control.d (make_variable_frame, finish_flet): Likewise.

2002-12-15  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_handles): handle KEYBOARD-STREAMs

2002-12-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (DYNAMIC_BIT_VECTOR): make an 8bit vector, not 1bit
	vector, because READ-FLOAT, WRITE-FLOAT, WRITE-INTEGER and
	WRITE-FLOAT will pass this bit vector to STREAM-READ-BYTE-SEQUENCE
	and STREAM-WRITE-BYTE-SEQUENCE

2002-12-13  Sam Steingold  <sds@gnu.org>

	CLUE and CLIO now compile with MIT-CLX
	* modules/clx/mit-clx/dependent.lisp (radians->int16)
	(int16->radians): avoid floating contagion warnings
	* modules/clx/mit-clx/depdefs.lisp
	(*def-clx-class-use-defclass*): set to '(window drawable pixmap)
	* modules/clx/mit-clx/clx.lisp: (provide :clx)

2002-12-13  Sam Steingold  <sds@gnu.org>

	* stream.d (kbd_last_buf): new function
	(rd_ch_keyboard): use it to flush UnbufferedStream_bytebuf before
	checking strm_keyboard_buffer: this fixes a bug in
	LISTEN/READ-CHAR interaction: listen would consume the char and
	READ-CHAR will never see it, while LISTEN will now always return T
	Reported by Jamison Masse <jamison@redwood.snu.ac.kr>

2002-12-12  Sam Steingold  <sds@gnu.org>

	* stream.d (key_event): renamed to key_event_t
	(add_keybinding): renamed to keybinding();
	second argument is a struct, not a pointer now
	(keybinding): removed the macro
	(make_keyboard_stream): use new macros BIND_KEY() and CHECK_CAP()

2002-12-12  Sam Steingold  <sds@gnu.org>

	reversed the 2001-11-27 patch: elt_nreverse() reverses
	_bits_ in the bitvector, while we need to swap _bytes_
	* stream.d (byte_swap): new function
	(READ-INTEGER, READ-FLOAT, WRITE-INTEGER, WRITE-FLOAT):
	use it instead of elt_nreverse()
	Reported by Bernard Urban <Bernard.Urban@meteo.fr>
